# jadwal

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.ini  main.cpp
.docs/: signals-slots.md  structure.md
algorithms/backtracking/: BacktrackingAlgorithm.cpp  BacktrackingAlgorithm.h
algorithms/constraint/: ConstraintAlgorithm.cpp  ConstraintAlgorithm.h
algorithms/genetic/: GeneticAlgorithm.cpp  GeneticAlgorithm.h
application/: ApplicationManager.cpp  ApplicationManager.h  ConfigurationManager.cpp  ConfigurationManager.h
include/algorithms/: BacktrackingAlgorithm.h  ConstraintPropagationAlgorithm.h  GeneticAlgorithm.h  SchedulingAlgorithmBase.h
include/core/: ApplicationManager.h  Scheduler.h
include/ui/: AboutDialog.h  MainWindow.h  ScheduleProgressDialog.h  ScheduleSetupDialog.h  SettingDialog.h
include/utils/: LanguageUtil.h
resources/ui/: MainWindow.ui  ScheduleProgressDialog.ui  ScheduleSetupDialog.ui  SettingDialog.ui  SubjectPage.ui
src/algorithms/: BacktrackingAlgorithm.cpp  ConstraintPropagationAlgorithm.cpp  GeneticAlgorithm.cpp  SchedulingAlgorithmBase.cpp
src/core/: ApplicationManager.cpp  Scheduler.cpp
src/ui/: AboutDialog.cpp  MainWindow.cpp  ScheduleProgressDialog.cpp  ScheduleSetupDialog.cpp  SettingDialog.cpp
src/utils/: LanguageUtil.cpp
translations/: en_US.qm  en_US.ts  i18n.qrc  id_ID.qm  id_ID.ts
ui/: AboutDialog.cpp  AboutDialog.h  MainWindow.cpp  MainWindow.h  MainWindow.ui
ui/schedule/: GenerateDialog.cpp  GenerateDialog.h  GenerateDialog.ui  ProcessPage.cpp  ProcessPage.h  ProcessPage.ui
